--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.jamesnetherton</groupId>
+  <groupId>com.github.jamesnetherton</groupId>
   <artifactId>wildfly-camel-gitbook-tests</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -11,10 +11,10 @@
   <url>https://github.com/jamesnetherton/wildfly-camel-gitbook-tests</url>
 
   <properties>
-    <version.crawler4j>4.1</version.crawler4j>
-    <version.slf4j>1.7.10</version.slf4j>
-    <version.maven.compiler.plugin>3.2</version.maven.compiler.plugin>
-    <version.maven.exec.plugin>1.3.2</version.maven.exec.plugin>
+    <version.crawler4j>4.4.0</version.crawler4j>
+    <version.slf4j>1.7.25</version.slf4j>
+    <version.maven.compiler.plugin>3.8.0</version.maven.compiler.plugin>
+    <version.maven.exec.plugin>1.6.0</version.maven.exec.plugin>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -39,8 +39,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${version.maven.compiler.plugin}</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
